--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -23,7 +23,7 @@ jobs:
       GH_TOKEN: ${{ github.token }}
     steps:
       - name: Notify
-        uses: ${{ github.action_path }}/.github/actions/notify
+        uses: ${{ github.action_path }}/.github/actions/notify/action.yml
         with:
           color: "16711680"
           title: "Failed"
@@ -38,9 +38,9 @@ jobs:
     steps:
       - name: Previous Conclusion
         id: previous
-        uses: ${{ github.action_path }}/.github/actions/previous
+        uses: ${{ github.action_path }}/.github/actions/previous/action.yml
       - name: Notify
-        uses: ${{ github.action_path }}/.github/actions/notify
+        uses: ${{ github.action_path }}/.github/actions/notify/action.yml
         if: ${{ contains(fromJson(steps.previous.outputs.result), 'failure') }}
         with:
           color: "65280"
