--- a/.github/actions/previous/action.yml
+++ b/.github/actions/previous/action.yml
@@ -13,7 +13,11 @@ runs:
       id: previous
       shell: bash
       run: |
-        resp=$(gh run list -w ${{ github.workflow_ref }} \
+        path=$(gh api \
+          -H "Accept: application/vnd.github+json" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          /repos/${{ github.repository }}/actions/runs/${{ github.run_id }} | jq .path)
+        resp=$(gh run list -w $path \
           -R ${{ github.repository }} \
           --branch ${{ github.ref_name }} \
           --json databaseId,status,conclusion)
