--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -42,6 +42,8 @@ jobs:
       GH_TOKEN: ${{ github.token }}
     steps:
       - uses: actions/checkout@v3
+        with:
+          repository: ${{ github.action_repository }}
       - run: echo "Hello, world!"
       #- name: Previous Conclusion
       #  id: previous
