--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -22,17 +22,12 @@ jobs:
     env:
       GH_TOKEN: ${{ github.token }}
     steps:
-      - uses: actions/checkout@v3
-      - run: |
-          echo ${{ github.action_path }}
-          ls ${{ github.action_path }}
-          cat ${{ github.action_path }}/.github/actions/notify/action.yml
-      #- name: Notify
-      #  uses: ${{ github.action_path }}/.github/actions/notify/action.yml
-      #  with:
-      #    color: "16711680"
-      #    title: "Failed"
-      #    webhook: ${{ secrets.DISCORD_WEBHOOK }}
+      - name: Notify
+        uses: zzak/action-discord/.github/actions/notify@main
+        with:
+          color: "16711680"
+          title: "Failed"
+          webhook: ${{ secrets.DISCORD_WEBHOOK }}
 
   notify_on_fixed:
     name: Notify when fixed
@@ -41,17 +36,13 @@ jobs:
     env:
       GH_TOKEN: ${{ github.token }}
     steps:
-      - uses: actions/checkout@v3
+      - name: Previous Conclusion
+        id: previous
+        uses: zzak/action-discord/.github/actions/previous@main
+      - name: Notify
+        uses: zzak/action-discord/.github/actions/notify@main
+        if: ${{ contains(fromJson(steps.previous.outputs.result), 'failure') }}
         with:
-          repository: ${{ github.action_repository }}
-      - run: echo "Hello, world!"
-      #- name: Previous Conclusion
-      #  id: previous
-      #  uses: ${{ github.action_path }}/.github/actions/previous/action.yml
-      #- name: Notify
-      #  uses: ${{ github.action_path }}/.github/actions/notify/action.yml
-      #  if: ${{ contains(fromJson(steps.previous.outputs.result), 'failure') }}
-      #  with:
-      #    color: "65280"
-      #    title: "Fixed"
-      #    webhook: ${{ secrets.DISCORD_WEBHOOK }}
+          color: "65280"
+          title: "Fixed"
+          webhook: ${{ secrets.DISCORD_WEBHOOK }}
