--- a/.github/actions/notify/action.yml
+++ b/.github/actions/notify/action.yml
@@ -20,11 +20,11 @@ runs:
       continue-on-error: true
       run: |
         resp=$(gh run view ${{ github.run_id }} -R ${{ github.repository }} --json jobs)
-        failed=$(echo $resp | jq -c \
+        failed=$(echo $resp | jq --compact-output \
           '[.jobs[] | select(.conclusion == "failure") | "- [\(.name | @html)](\(.url))"]')
         echo $failed
 
-        output=$(echo $failed | jq -c \
+        output=$(echo $failed | jq --compact-output \
           'if . == [] then empty else {name: "Failed Job(s)", value: join("\n"), inline: false} end')
         echo $output
 
@@ -39,7 +39,7 @@ runs:
           -H "Accept: application/vnd.github+json" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           /repos/${{ github.repository }}/commits/${{ github.sha }})
-        result=$(echo $resp | jq -c '.commit | .message | @html | .[0:100]')
+        result=$(echo $resp | jq --compact-output '.commit | .message | @html | .[0:100]')
         echo $result
         echo "result=$result" >> $GITHUB_OUTPUT
     - name: Sanitize workflow name
@@ -61,7 +61,7 @@ runs:
       id: embed-fields
       shell: bash
       run: |
-        default=$(jq -cn '{
+        default=$(jq --compact-output --null-input '{
           name: "Repo",
           value: "[${{ github.event.repository.full_name }}](${{ github.server_url }}/${{ github.repository }})",
           inline: false
@@ -93,14 +93,14 @@ runs:
         }')
         echo $default
 
-        combined=$(jq -cs '.' <<< $default'${{steps.get-failed-jobs.outputs.output}}')
+        combined=$(jq --compact-output --slurp '.' <<< $default'${{steps.get-failed-jobs.outputs.output}}')
         echo $combined
         echo "fields=$combined" >> $GITHUB_OUTPUT
     - name: Generate payload
       id: generate-payload
       shell: bash
       run: |
-        payload=$(jq -cn \
+        payload=$(jq --compact-output --null-input \
           '{
             "username": "GitHub",
             "avatar_url": "https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png",
