--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -31,7 +31,7 @@ jobs:
           result=$(echo '{
             "previous": ${{ steps.previous.outputs.result }},
             "result": ${{ toJson(inputs.result) }}
-          }' | jq --compact-output '{
+          }' | jq --compact-output --raw-output '{
             color: (if .result == "success" then "16711680" else "65280" end),
             title: (if .previous == "success" and .result == "success" then "Passing" else (if .previous == "failure" and .result == "success" then "Fixed" else (if .previous == "failure" and .result == "failure" then "Still Failing" else "Failed" end) end) end)
           }')
