--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -28,20 +28,18 @@ jobs:
       - name: Setup statuses
         id: status
         run: |
-          result=$(echo '{
-            "previous": ${{ steps.previous.outputs.result }},
-            "result": ${{ toJson(inputs.result) }}
-          }' | jq --compact-output --raw-output '{
-            color: (if .result == "success" then "16711680" else "65280" end),
-            title: (if .previous == "success" and .result == "success" then "Passing" else (if .previous == "failure" and .result == "success" then "Fixed" else (if .previous == "failure" and .result == "failure" then "Still Failing" else "Failed" end) end) end)
-          }')
-          echo $result
-          echo "result=$result" >> $GITHUB_OUTPUT
+          color=$(echo ${{ steps.previous.outputs.result }} | jq --compact-output --raw-output --raw-input '(if . == "success" then "16711680" else "65280" end)')
+          echo $color
+          echo "color=$color" >> $GITHUB_OUTPUT
+
+          title=$(echo ${{ inputs.result }} | jq --compact-output --raw-output --raw-input '(if .previous == "success" and .result == "success" then "Passing" else (if .previous == "failure" and .result == "success" then "Fixed" else (if .previous == "failure" and .result == "failure" then "Still Failing" else "Failed" end) end) end)')
+          echo $title
+          echo "title=$title" >> $GITHUB_OUTPUT
       - name: Notify
         uses: zzak/action-discord/.github/actions/notify@main
         with:
-          color: ${{ toJson(steps.status.outputs.result).color }}
-          title: ${{ toJson(steps.status.outputs.result).title }}
+          color: ${{ steps.status.outputs.result.color }}
+          title: ${{ steps.status.outputs.result.title }}
           webhook: ${{ secrets.DISCORD_WEBHOOK }}
 
   notify_on_fixed:
