--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Setup statuses
         id: status
         run: |
-          color=$(echo ${{ steps.previous.outputs.result }} | jq --compact-output --raw-output --raw-input '(if . == "success" then "16711680" else "65280" end)')
+          color=$(echo ${{ steps.previous.outputs.result }} | jq --compact-output --raw-output --raw-input '(if . == "success" then "65280" else "16711680" end)')
           echo $color
           echo "color=$color" >> $GITHUB_OUTPUT
 
