--- a/action.yml
+++ b/action.yml
@@ -22,6 +22,7 @@ runs:
       with:
         ruby-version: 3.2
         bundler-cache: true
+        working-directory: ${{ github.action_path }}
     - name: Notify
       shell: bash
       env:
