Fix GITHUB_ENV setup

--- a/action.yml
+++ b/action.yml
@@ -24,8 +24,8 @@ runs:
     - uses: actions/checkout@v3
     - name: Reset bundler env
       run: |
-        echo "BUNDLE_ONLY="
-        echo "BUNDLE_WITHOUT="
+        echo "BUNDLE_ONLY='' >> $GITHUB_ENV"
+        echo "BUNDLE_WITHOUT='' >> $GITHUB_ENV"
       shell: bash
     - name: Set up Ruby 3.2
       uses: ruby/setup-ruby@v1
